2008-08-06  Benjamin <lindnerb@users.sourceforge.net>

	* term/post.trm: Fix parsing error for option "palfuncparam".
	Bug #2039912

	* term/emf.trm: Allow fractional linewidths; do not allow dash pattern
	length to go to zero.
	Bug #2040244

2008-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Provide a separate "dashlength" option.

2008-08-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.h src/eval.c: Track min/max range of data on each axis
	indepently of the current axis range itself.  Export to the
	corresponding variables GPVAL_DATA_{AXIS}_MIN and so on.
	This is useful all by itself, but also lays the groundwork for
	implementing "range-frame" borders as per request #2025481.

2008-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): Ignore NULL labels. This prevents possible
	segfault if tic labels are requested from a non-existent data column.
	Bugfix.

	* src/plot2d.c (eval_plots) src/graphics.c (do_plot):
	Histograms did not correctly honor 'set style user increment'.
	Bugfix.

	* src/plot2d.c (eval_plots): Remove order dependency of newhist options.

2008-07-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp(wxt_set_color):
	Pay attention to the value of 'set palette maxcolors'.
	Bugfix.

2008-07-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_ticlabel_using): If tic labels will be generated
	from an expression then force evaluation of all column contents.
	Otherwise references to column() return uninitialized garbage. Bugfix.

2008-07-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/command.c (pause_command) src/command.h:
	New variant 'pause mouse close' will pause until the plot window is
	closed. Unlike existing variants, this does not disable mouse-clicks,
	hotkeys, or zooming.  Add wxt to the list of terminals that need a
	work-around to avoid losing an input character when the plot window
	is closed.
